[package]
name = "mysqlp"
version = "0.1.0"
authors = ["Ryan Chipman <ryan@ryanchipman.com>"]

[dependencies]
bytes = "0.4.10"
combine = "3.6"
prost = "0.4.0"
prost-derive = "0.4.0"
lazy_static = "1.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
prost-build = "0.4.0"
